<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.group26.myapplication.SignUpActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/signupActivityNameEditText"
        android:hint="@string/signupActivityNameHint"
        android:layout_marginTop="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/signupActivityEmailEditText"
        android:layout_below="@id/signupActivityNameEditText"
        android:hint="@string/signupActivityEmailHint"
        android:layout_marginTop="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/signupActivityPhoneNumberEditText"
        android:layout_below="@id/signupActivityEmailEditText"
        android:hint="@string/signupActivityPhoneHint"
        android:layout_marginTop="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/signupActivityPasswordEditText"
        android:layout_below="@id/signupActivityPhoneNumberEditText"
        android:hint="@string/signupActivityPasswordHint"
        android:layout_marginTop="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/signupActivityPasswordConfirmationEditText"
        android:layout_below="@id/signupActivityPasswordEditText"
        android:hint="@string/signupActivityConfirmPasswordHint"
        android:layout_marginTop="10dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signupActivitySignUpButtonText"
        android:id="@+id/signupActivitySignUpButton"
        android:layout_below="@id/signupActivityPasswordConfirmationEditText"
        android:layout_marginTop="30dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signupActivityCancelButtonText"
        android:id="@+id/signupActivityCancelButton"
        android:layout_below="@id/signupActivitySignUpButton"
        android:layout_marginTop="10dp"/>
</RelativeLayout>
