<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.group26.myapplication.EditProfileActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editProfileName"
            android:layout_gravity="center"
            android:padding="10dp"/>

        <ImageView
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:id="@+id/editProfileImageView"
            android:layout_gravity="center"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editProfileNameText"
            android:hint="@string/EditProfileNameText" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editProfileEmailText"
            android:hint="@string/EditProfileEmailId" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editProfilePhomeNumber"
            android:hint="@string/editProfilePhoneNumber" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editProfilePassword"
            android:hint="@string/editProfilePassword" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:weightSum="1">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/EditProfileUpdateButton"
                android:id="@+id/editProfileUpdatebutton"
                android:layout_weight="0.45"
                android:paddingRight="10dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/editProfileCancelButton"
                android:id="@+id/editProfileCancelButton"
                android:layout_weight="0.45"
                android:paddingLeft="10dp"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
