<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.group26.myapplication.LoginActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/loginActivityEmailEditText"
        android:layout_marginTop="80dp"
        android:hint="@string/loginActivityEmailHint"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/loginActivityPasswordEditText"
        android:layout_below="@id/loginActivityEmailEditText"
        android:layout_marginTop="50dp"
        android:hint="@string/loginActivityPasswordHint"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loginActivityLoginButtonText"
        android:id="@+id/loginActivityLoginButton"
        android:layout_below="@id/loginActivityPasswordEditText"
        android:layout_marginTop="50dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loginActivityNewAccountText"
        android:id="@+id/loginActivityNewAccountButton"
        android:layout_below="@id/loginActivityLoginButton"
        android:layout_marginTop="50dp"/>
</RelativeLayout>
